# WebpageSearchRAGPlugin

./: .gitignore  ARCHITECTURE.md  EMBEDDING_MODELS.md  README.md  actionCP.py  agentCP.py  colab_indexer.ipynb  colab_indexer.py  decisionCP.py  main.py  memoryCP.py  modelsCP.py  perceptionCP.py  pyproject.toml  toolsCP.py  urls.txt
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
